# hash256-miner

./: .env.example  .gitignore  Cargo.toml  README.md  kernel.cl
.cargo/: config.toml.example
src/: chain.rs  config.rs  main.rs  pow.rs
src/miner/: cpu.rs  gpu.rs
